Feat: Add class implementation